prevent button flicker

--- a/packages/app/src/components/global/GoogleSignInButton/GoogleSignInButton.module.css
+++ b/packages/app/src/components/global/GoogleSignInButton/GoogleSignInButton.module.css
@@ -1,3 +1,6 @@
 .google-btn {
   width: 90px;
+  & > div > div > div:last-child {
+    display: none;
+  }
 }
